# python-gssapi

./: .gitignore  .travis.before-deploy.sh  .travis.install.sh  .travis.sh  .travis.yml  CODE_OF_CONDUCT.md  ISSUE_TEMPLATE  LICENSE.txt  MANIFEST.in  README.rst  README.txt  docs-requirements.txt  genindex.html  gssapi-console.py  gssapi.html  gssapi.raw.html  index.html  mypy.ini  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini  tutorials.html
.ci/: before-deploy-windows-wheels.sh  before-deploy.sh  before-docs-deploy.sh  build.sh  deploy-win.sh  docs-deploy.sh  lib-deploy.sh  lib-setup.sh
.doctrees/: credstore.doctree  environment.pickle  gssapi.doctree
.github/: stale.yml
.travis/: before-deploy-windows-wheels.sh  before-deploy.sh  before-docs-deploy.sh  build.sh  deploy-win.sh  docs-deploy.sh  lib-setup.sh  lib-util.sh  lib-verify.sh  verify.sh
_sources/: index.rst.txt  tutorials.rst.txt
ci/: before-deploy.sh  before-docs-deploy.sh  build.sh  create-release-tar.sh  lib-deploy.sh  lib-setup.sh  lib.sh  manylinux2014.sh  release-wheel.sh  release-win.sh  run-on-linux.sh  test.sh
docs/: Makefile  make.bat
gssapi/: __init__.py  _utils.py  _win_config.py  creds.py  exceptions.py  mechs.py  names.py  sec_contexts.py
latest/: .buildinfo  .from  basic-tutorial.html  credstore.html  genindex.html  gssapi.html  gssapi.raw.html  index.html  objects.inv  otherdoc.html  py-modindex.html  search.html  searchindex.js  tutorials.html
stable/: .buildinfo  .from  basic-tutorial.html  credstore.html  genindex.html  gssapi.html  gssapi.raw.html  (+7 more)
(+178 files in other folders)
